@@ -33,6 +33,7 @@ module Cucumber
         :lang    => 'en',
         :dry_run => false,
         :source  => true,
+        :snippets => true,
         :formats => {},
         :excludes => [],
         :scenario_names => nil
@@ -100,6 +101,9 @@ module Cucumber
         end
         opts.on("-n", "--no-source", "Don't show the file and line of the step definition with the steps.") do
           @options[:source] = false
+        end
+        opts.on("-s", "--no-snippets", "Don't show the snippets for pending steps") do
+          @options[:snippets] = false
         end
         opts.on_tail("--version", "Show version") do
           puts VERSION::STRING
