@@ -23,6 +23,7 @@ in the inside string. If the triple quotes are indented 4 spaces, then the text 
 spaces removed too.
 
 === New features
+* Added --no-snippets option to hide snippets for pending steps when using Pretty formatter (#69 Joseph Wilk)
 * Added Autotest support - work in progress... (Peter Jaros)
 * Added new --exclude option (Bryan Helkamp)
 * Added new --scenario option (Peter Jaros)
